commit al master

--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,10 @@
 <body>
     <header></header>
     <main>
+        <div class="containar">
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este es el parrafo de inicio</p>
+    </div>
     </main>
 </body>
 </html>
