--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <header></header>
-    <main>
+    <main>        
         <div class="containar">
+        <div class="cabecera">
+            cabecera
+        </div>
+        
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este es el parrafo de inicio</p>
     </div>
