--- a/blog.html
+++ b/blog.html
@@ -12,11 +12,14 @@
     <main>        
         <div class="containar">
         <div class="cabecera">
-            cabecera
+           JaPu
+           <span class="tagible">La información es vida</span>
         </div>
         
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <h1>Conservación animal</h1>
+        <p>Información de todo tipo de animales que necesitan de protección, instruirse sobre estos mismo
+            para crear conciencia de que los animales son parte importante de nuestra vida
+        </p>
     </div>
     </main>
 </body>
