cambio de letra

--- a/blog.html
+++ b/blog.html
@@ -9,18 +9,17 @@
 </head>
 <body>
     <header></header>
-    <main>        
+    <main>
         <div class="containar">
-        <div class="cabecera">
-           JaPu
-           <span class="tagible">La información es vida</span>
-        </div>
-        
-        <h1>Conservación animal</h1>
-        <p>Información de todo tipo de animales que necesitan de protección, instruirse sobre estos mismo
-            para crear conciencia de que los animales son parte importante de nuestra vida
+        <h1>Aqui vamos a hacer un blog post</h1>
+        <p>Y este es el parrafo de inicio</p>
+        <p>
+            Los blog son
+            Los blog son
+            Los blog son
         </p>
     </div>
+    
     </main>
 </body>
 </html>
