--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <main>
         <div class="containar">
         <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <p>Y este es el parrafo de inicio.</p>
     </div>
     </main>
 </body>
