inicio de cabecera

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,11 @@
 <body>
     <header></header>
     <main>
+        
         <div class="containar">
+            <div class="cabe">
+                Cabecera
+            </div>
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este es el parrafo de inicio.</p>
     </div>
