--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,7 @@
             </div>
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este es el parrafo de inicio.</p>
+        <p>Vive la vida aunque sientas que sea dolorosa, al fin al cabo no tiene sentido</p>
     </div>
     </main>
 </body>
