--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,8 @@
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este es el parrafo de inicio.</p>
         <p>Vive la vida aunque sientas que sea dolorosa, al fin al cabo no tiene sentido</p>
+           <p>No siempre estaras bien, pero hay que buscar la manera de seguir adelante</p> 
+
     </div>
     </main>
 </body>
