Finalizada la cabe c

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,8 @@
         
         <div class="containar">
             <div class="cabe">
-                Cabecera
+               PENSAMIENTOS  <span class="tagible">Reflexionar sobre la vida misma no esta mal</span>
+               
             </div>
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este es el parrafo de inicio.</p>
