Se agrego contenido

--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,13 @@
         <p>Y este es el parrafo de inicio.</p>
         <p>Vive la vida aunque sientas que sea dolorosa, al fin al cabo no tiene sentido</p>
            <p>No siempre estaras bien, pero hay que buscar la manera de seguir adelante</p> 
+            <p>
+                Los blogs es la mejor forma de compartir
+                información, de tus ideas, experiencias
+                que probablemente podrán ayudar a muchas personas
+                en su día a día.
 
+            </p>
     </div>
     </main>
 </body>
