se introdujo un logo

--- a/blog.html
+++ b/blog.html
@@ -13,9 +13,11 @@
         
         <div class="containar">
             <div class="cabe">
+                <img class="logo" src="imagenes/dragon.png" />
                PENSAMIENTOS  <span class="tagible">Reflexionar sobre la vida misma no esta mal</span>
                
             </div>
+            <div class="cuerpo">
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este es el parrafo de inicio.</p>
         <p>Vive la vida aunque sientas que sea dolorosa, al fin al cabo no tiene sentido</p>
@@ -27,6 +29,7 @@
                 en su día a día.
 
             </p>
+        </div>
     </div>
     </main>
 </body>
