--- a/blog.html
+++ b/blog.html
@@ -25,8 +25,12 @@
                 información, de tus ideas, experiencias
                 que probablemente podrán ayudar a muchas personas
                 en su día a día.
-
-            </p>
+		
+    
+	  </p>
+    </div>
+    <div class="footer">
+	Me la suda
     </div>
     </main>
 </body>
